<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/tabmenu"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true" >

        <ImageView
            android:id="@+id/menu1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:src="@drawable/add_selector" />

        <ImageView
            android:id="@+id/menu2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:src="@drawable/list_selector" />

        <ImageView
            android:id="@+id/menu3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:src="@drawable/roster_selector" />

      <!--   <ImageView
            android:id="@+id/menu4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:src="@drawable/help_selector" />

        <ImageView
            android:id="@+id/menu5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:src="@drawable/about_selector" /> -->
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/body"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_above="@id/tabmenu"
        android:layout_below="@+id/head"
        android:layout_centerHorizontal="true"
        android:orientation="vertical" >
        
      <EditText
        android:id="@+id/phone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/num"
        android:layout_alignBottom="@+id/num"
        android:layout_toLeftOf="@+id/link"
        android:layout_toRightOf="@+id/num"
        android:imeOptions="actionNext"
        android:inputType="phone"
        android:maxLength="13"
        android:maxLines="1" >
    </EditText>

    <TextView
        android:id="@+id/num"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="39dp"
        android:paddingLeft="20px"
        android:text="@string/num" >
    </TextView>

    <Button
        android:id="@+id/link"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/phone"
        android:layout_alignBottom="@+id/phone"
        android:layout_alignParentRight="true"
        android:paddingRight="20px"
        android:text="@string/link" >
    </Button>

    <TextView
        android:id="@+id/type"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/link"
        android:layout_marginTop="71dp"
        android:paddingLeft="20px"
        android:text="@string/type" >
    </TextView>

    <Button
        android:id="@+id/button1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/checkBox_msn"
        android:layout_alignRight="@+id/checkBox_phone"
        android:layout_below="@+id/checkBox_msn"
        android:layout_marginTop="80dp"
        android:text="@string/ok" >

    </Button>

    <CheckBox
        android:id="@+id/checkBox_msn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/type"
        android:layout_alignBottom="@+id/type"
        android:layout_alignLeft="@+id/phone"
        android:layout_marginLeft="16dp"
        android:text="@string/msn" >
    </CheckBox>

    <CheckBox
        android:id="@+id/checkBox_phone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/checkBox_msn"
        android:layout_alignBottom="@+id/checkBox_msn"
        android:layout_toLeftOf="@+id/link"
        android:text="@string/phone" >
    </CheckBox>
        
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/head"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:background="@drawable/head_bg"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/head_text"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/head"
            android:textSize="40sp" />
    </LinearLayout>

</RelativeLayout>